[package]
name = "feedme"
version = "0.3.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "3.1"
scraper = "0.24"
url = "2.5"
arboard = { version = "3.6", features = ["wayland-data-control"] }
clap = { version = "4.5.48", features = ["derive"] }
